#112 fix icons overflowing in related_content pane

--- a/dll/static/src/scss/content-teaser.scss
+++ b/dll/static/src/scss/content-teaser.scss
@@ -5,6 +5,7 @@
   background-color: rgba(255, 255, 255, 1);
   color: rgba(0, 0, 0, 1);
   overflow: hidden;
+  position: relative;
 }
 .content-teaser--teaching-module {
   border-color: $color--teaching-module;
